Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-05-09 (SVN):
    * utils/dcc/dcc.c (DEC_ReadData): Assign and print the globals before
      reading the progs.
    * utils/dcc/hcc.c: Remove the useless -crc command line option.

2012-05-09 (SVN):
    * utils/dcc/dcc.c: Made DEC_GetFunctionIdxByName to actually be able
      return 0: It used to return the numfunctions value when it failed
      to find a match. GetReturnType and GetLastFunctionReturn do check
      the value returned from DEC_GetFunctionIdxByName against 0. On the
      other hand PR_LocalGlobals() and GetFieldFunctionHeader(), the two
      other callers of DEC_GetFunctionIdxByName, don't do so: added fixme
      notes to them.

2012-05-09 (SVN):
    * utils/dcc/dcc.c (Dcc_Functions): Unixify the file path and create
      parent directories if any. Fixes the file open failure with hcbots
      v1.03 progs where the file names have windows backslashes in them.
      We still go into some endless loop when decompiling hcbots' progs,
      though: to be looked into.

2012-05-09 (SVN):
    * utils/dcc/dcc.c: Whitespace and coding style cleanup. Changed some
      else cases whose matching ifs always return into ifs. Changed some
      if(condition) into if(!condition) where it made the code some more
      readable. Changed malloc()/strcpy() call pairs into strdup() calls.

2012-05-06 (SVN):
    * Xcode project file update from Steven
    * updated version date stamp to 2012-05-05.

2012-05-05 (SVN):
    * Added timidity_patches.tar.gz to our download pages under support
      files section. Adjusted the README files for it.

2012-05-03 (SVN):
    * oslibs/windows/dxsdk/include/ddraw.h: updated from wine git repo
      e0fab0d39ccd19ca5bc3499305b0927e6f350431 (a comment correction.)

2012-05-01 (SVN):
    * Added new sys_osx.m under engine/h2shared/, moved Sys_GetBasedir()
      from sys_unix.c and Cocoa_ErrorMessage() from customized SDLMain.m